--- a/style.css
+++ b/style.css
@@ -9,8 +9,10 @@ h1 {
 h2 {
     font-family: Bradley Hand, cursive;
     text-align: center;
+    color: 990066;
 }
 p1 {
     font-family: Courier New, monospace;
     text-align: center;
+    color: 000000;
 }
