--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 body {
-    background-color: FFC0CB;
+    background-color: 000000;
 }
 h1 {
     font-family: Marker Felt, fantasy;
-    color: 660033;
+    color: 000000;
     text-align: center;
 }
 h2 {
     font-family: Bradley Hand, cursive;
     text-align: center;
-    color: 990066;
+    color: 000000;
 }
 p1 {
     font-family: Courier New, monospace;
