--- a/style.css
+++ b/style.css
@@ -16,7 +16,41 @@ p1 {
     text-align: center;
     color: 000000;
 }
-#popup-form-container {
+
+* {box-sizing: border-box}
+
+/* Set height of body and the document to 100% */
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial;
+}
+
+/* Style tab links */
+.tablink {
+  background-color: #D58A94;
+  color: black;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  font-size: 17px;
+  width: 25%;
+}
+
+.tablink:hover {
+  background-color: #997070;
+}
+
+/* Style the tab content (and add height:100% for full page content) */
+.tabcontent {
+  color: black;
+  display: none;
+  padding: 100px 20px;
+  height: 100%;
+}
+.popup-form-container {
     position: fixed;
     top: 0;
     left: 0;
@@ -29,7 +63,7 @@ p1 {
     z-index: 1000;
 }
 
-#popup-form-container form {
+.popup-form-container form {
     background-color: #ffffff;
     padding: 20px;
     border-radius: 5px;
@@ -37,3 +71,6 @@ p1 {
     max-width: 500px;
     margin: 30px auto;
 }
+.My KSU Journey! {background-color: pink;}
+.All About Me! {background-color: pink;}
+.Contact Me! {background-color: pink;}
