--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body, html {
 }
 
 /* Style tab links */
-.tablink {
+tablink {
   background-color: #D58A94;
   color: black;
   float: left;
@@ -39,18 +39,18 @@ body, html {
   width: 25%;
 }
 
-.tablink:hover {
+tablink:hover {
   background-color: #997070;
 }
 
 /* Style the tab content (and add height:100% for full page content) */
-.tabcontent {
+tabcontent {
   color: black;
   display: none;
   padding: 100px 20px;
   height: 100%;
 }
-.popup-form-container {
+popup-form-container {
     position: fixed;
     top: 0;
     left: 0;
@@ -63,7 +63,7 @@ body, html {
     z-index: 1000;
 }
 
-.popup-form-container form {
+popup-form-container form {
     background-color: #ffffff;
     padding: 20px;
     border-radius: 5px;
@@ -71,6 +71,6 @@ body, html {
     max-width: 500px;
     margin: 30px auto;
 }
-.My KSU Journey! {background-color: pink;}
-.All About Me! {background-color: pink;}
-.Contact Me! {background-color: pink;}
+My KSU Journey! {background-color: pink;}
+All About Me! {background-color: pink;}
+Contact Me! {background-color: pink;}
