--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body, html {
 }
 
 /* Style tab links */
-tablink {
+.tablink {
   background-color: #D58A94;
   color: black;
   float: left;
@@ -39,12 +39,12 @@ tablink {
   width: 25%;
 }
 
-tablink:hover {
+.tablink:hover {
   background-color: #997070;
 }
 
 /* Style the tab content (and add height:100% for full page content) */
-tabcontent {
+.tabcontent {
   color: black;
   display: none;
   padding: 100px 20px;
